[tool.poetry]
name = "twichecker"
version = "1.0.0"
description = "Check Twitter's profile and send that as embed on Discord."
authors = ["nh-chitose"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-cord = "^2.4.1"
python-dotenv = "^1.0.0"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
