[tool.poetry]
name = "twichecker"
version = "1.1.1"
description = "Check Twitter's profile and send that as embed on Discord."
authors = ["nh-chitose"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
py-cord = "^2.4.1"
python-dotenv = "^1.0.0"
requests = "^2.29.0"
typing-extensions = "^4.5.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.3"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
